feat: add in-game host controls and pausing
